--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <title>Pacmen</title>
-    <!-- DO NOT CHANGE THIS LINE OF CODE -->
+    <!-- This script calls pacmen behavior for makeone() and update() -->
     <script src="./pacmen.js"></script>
 </head>
 
